- removed View->Fullscreen view, it doesn't make sense in this kind of app
- better application and document icons
- removed the "Shaded translations list" option, it's now always enabled
- misc minor UI improvements
- fixed possible transaction memory database corruption (#337, #352)
- added instructions on how to install additional spellchecker dictionaries


Version 1.4.6
-------------

- OS X: fixed TM configuration tab to show languages list
- fixed bug introduced in 1.4.3 that caused "Update from POT file"
  to clear metadata in catalog header (#355)
- added Kazakh translation (Baurzhan Muftakhidinov)


Version 1.4.5
-------------

- OS X: fixed Find to actually show hits in text control
- OS X: fixed "Check for updates" preference broken by 1.4.4


Version 1.4.4
-------------

- sort catalogs in the manager alphabetically (#245)
- fixed escaping of quotes in catalog headers (#290)
- fixed reformatting of obsolete entries in catalogs (#329)
- fixed list selection visibility on Windows 7 (#336)
- Windows: automatically check for available updates


Version 1.4.3
-------------

- Unix: fixed crash with Zemberek spell-checker backend installed (#276)
- fixed parsing of catalogs produced with xgettext --indent (#189)
- fixed TM updating broken in 1.3.5 (#294)
- support GNOME's xml2po file references (#314)
- fixed handling of "%" in filenames (#143)
- added more translations:
     Vietnamese (Trần Ngọc Quân)
     Uzbek (Oybek Djuraev)


Version 1.4.2
-------------

- Unix: fixed Ctrl+Up/Down/PgUp/PgDn shortcuts when NumLock is on (#2006843)
- OS X: fixed running Gettext tools when Poedit is in directory with
  spaces in its name (#2025823)
- added Uyghur translation (Abduqadir Abliz)


Version 1.4.1
-------------

- fixed HTML export to properly escape the text (#1739062)
- remember last used search phrase in Find window (#1909847)
- Windows: fixed text entry using AltGr on many European keyboards


Version 1.4
-----------
