@@ -26,33 +26,108 @@
 
 #include "cat_sorting.h"
 
-CatalogItemsComparator::CatalogItemsComparator(const Catalog& catalog)
-    : m_catalog(catalog)
+#include <wx/config.h>
+
+/*static*/ SortOrder SortOrder::Default()
 {
+    SortOrder order;
+
+    wxString by = wxConfig::Get()->Read(_T("/sort_by"), _T("file-order"));
+    long untrans = wxConfig::Get()->Read(_T("/sort_untrans_first"), 1L);
+
+    if ( by == _T("source") )
+        order.by = By_Source;
+    else if ( by == _T("translation") )
+        order.by = By_Translation;
+    else
+        order.by = By_FileOrder;
+
+    order.untransFirst = (untrans != 0);
+
+    return order;
 }
+
+
+void SortOrder::Save()
+{
+    wxString bystr;
+    switch ( by )
+    {
+        case By_FileOrder:
+            bystr = _T("file-order");
+            break;
+        case By_Source:
+            bystr = _T("source");
+            break;
+        case By_Translation:
+            bystr = _T("translation");
+            break;
+    }
+
+    wxConfig::Get()->Write(_T("/sort_by"), bystr);
+    wxConfig::Get()->Write(_T("/sort_untrans_first"), untransFirst);
+}
+
 
 bool CatalogItemsComparator::operator()(int i, int j) const
 {
     const CatalogItem& a = Item(i);
     const CatalogItem& b = Item(j);
 
-    if ( !a.IsTranslated() && b.IsTranslated() )
-        return true;
-    if ( a.IsTranslated() && !b.IsTranslated() )
-        return false;
+    if ( m_order.untransFirst )
+    {
+        if ( !a.IsTranslated() && b.IsTranslated() )
+            return true;
+        if ( a.IsTranslated() && !b.IsTranslated() )
+            return false;
 
-    if ( a.GetValidity() == CatalogItem::Val_Invalid && b.GetValidity() != CatalogItem::Val_Invalid )
-        return true;
-    if ( a.GetValidity() != CatalogItem::Val_Invalid && b.GetValidity() == CatalogItem::Val_Invalid )
-        return false;
+        if ( a.GetValidity() == CatalogItem::Val_Invalid && b.GetValidity() != CatalogItem::Val_Invalid )
+            return true;
+        if ( a.GetValidity() != CatalogItem::Val_Invalid && b.GetValidity() == CatalogItem::Val_Invalid )
+            return false;
 
-    if ( a.IsFuzzy() && !b.IsFuzzy() )
-        return true;
-    if ( !a.IsFuzzy() && b.IsFuzzy() )
-        return false;
+        if ( a.IsFuzzy() && !b.IsFuzzy() )
+            return true;
+        if ( !a.IsFuzzy() && b.IsFuzzy() )
+            return false;
+    }
+
+    switch ( m_order.by )
+    {
+        case SortOrder::By_FileOrder:
+        {
+            return i < j;
+        }
+
+        case SortOrder::By_Source:
+        {
+            int r = CompareStrings(a.GetString(), b.GetString());
+            if ( r != 0 )
+                return r < 0;
+            break;
+        }
+
+        case SortOrder::By_Translation:
+        {
+            int r = CompareStrings(a.GetTranslation(), b.GetTranslation());
+            if ( r != 0 )
+                return r < 0;
+            break;
+        }
+    }
 
     // As last resort, sort by position in file. Note that this means that
     // no two items are considered equal w.r.t. sort order; this ensures stable
     // ordering.
     return i < j;
+}
+
+
+int CatalogItemsComparator::CompareStrings(const wxString& a, const wxString& b) const
+{
+    // TODO: * use ICU for correct ordering
+    //       * use natural sort (for numbers)
+    //       * use ICU for correct case insensitivity
+    //       * ignore accelerators, especially at the beginning
+    return a.CmpNoCase(b);
 }
