@@ -136,6 +136,28 @@
         <label platform="unix|mac">Automatic C_omments Window</label>
         <checkable>1</checkable>
       </object>
+      <object class="separator"/>
+      <object class="wxMenuItem" name="sort_by_order">
+        <label platform="win">Sort by _file order</label>
+        <label platform="unix|mac">Sort by _File Order</label>
+        <radio>1</radio>
+      </object>
+      <object class="wxMenuItem" name="sort_by_source">
+        <label platform="win">Sort by _source</label>
+        <label platform="unix|mac">Sort by _Source</label>
+        <radio>1</radio>
+      </object>
+      <object class="wxMenuItem" name="sort_by_translation">
+        <label platform="win">Sort by _translation</label>
+        <label platform="unix|mac">Sort by _Translation</label>
+        <radio>1</radio>
+      </object>
+      <object class="separator"/>
+      <object class="wxMenuItem" name="sort_untrans_first">
+        <label platform="win">_Untranslated entries first</label>
+        <label platform="unix|mac">_Untranslated Entries First</label>
+        <checkable>1</checkable>
+      </object>
       <style>wxMENU_TEAROFF</style>
     </object>
     <object class="wxMenu" name="menu_help">
