@@ -22,6 +22,7 @@ Version 1.5 (not yet released)
 - misc minor UI improvements
 - fixed possible transaction memory database corruption (#337, #352)
 - added instructions on how to install additional spellchecker dictionaries
+- added sorting by different criteria (#256, #239)
 
 
 Version 1.4.6
